--- a/frontend/index.html
+++ b/frontend/index.html
@@ -8,5 +8,7 @@
     <script src="main.js" defer></script>
     <link rel="stylesheet" type="text/css" href="main.css" />
   </head>
-  <body></body>
+  <body>
+    <div class="contentContainer">Hej hej (=</div>
+  </body>
 </html>
