--- a/frontend/index.html
+++ b/frontend/index.html
@@ -5,11 +5,20 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grid painter</title>
-    <script src="main.js" defer></script>
-    <link rel="stylesheet" type="text/css" href="main.css" />
+
+    <link href="main.css" rel="stylesheet" />
     <link rel="icon" type="image/x-icon" href="favicon.ico" />
   </head>
   <body>
-    <div class="contentContainer">Hej hej (=</div>
+    <div class="contentContainer">
+      <div class="welcomeWrapper"<p>Hej hej</p></div>
+      <div class="loginForm">
+        <form>
+          <input id="inputName" type="text" placeholder="Skriv ditt namn här" />
+          <button id="loginBtn">LOGGA IN!</button>
+        </form>
+      </div>
+    </div>
+    <script src="main.js" defer></script>
   </body>
 </html>
