end of day push

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -11,7 +11,14 @@
   </head>
   <body>
     <div class="contentContainer">
-      <div class="welcomeWrapper"<p>Hej hej</p></div>
+      <div class="welcomeWrapper">
+        <h1>GRID PAINTER</h1>
+        <h2>Välkommen till vårt skitsnygga spel!</h2>
+        <p>
+          Skriv in ditt användarnamn i rutan och tryck på logga in för att
+          börja!
+        </p>
+      </div>
       <div class="loginForm">
         <form>
           <input id="inputName" type="text" placeholder="Skriv ditt namn här" />
