--- a/frontend/index.html
+++ b/frontend/index.html
@@ -21,7 +21,11 @@
       </div>
       <div class="loginForm">
         <form>
-          <input id="inputName" type="text" placeholder="Skriv ditt namn här" />
+          <input
+            id="inputName"
+            type="text"
+            placeholder="Skriv ditt namn här"
+          /><br />
           <button id="loginBtn">LOGGA IN!</button>
         </form>
       </div>
