added html for dekstop2

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,6 +19,14 @@
         </form>
       </div>
     </div>
+    <!-- <div>
+      <h2 class="countPlayersTitle">Antal spelare:<span id="countPlayers">x</span></h2>
+      <div>
+        <h3 class="gameRulesTitle">Spelets regler:</h3>
+        <p class="gameRulesText">Lorem ipsum dolor sit amet consectetur adipisicing elit. Illum nobis alias atque necessitatibus aspernatur excepturi mollitia omnis, soluta quod nemo fugit. Adipisci mollitia a repudiandae eum optio ex, nostrum odio.</p>
+      </div>
+      <button id="startGameBtn">STARTA SPELET</button>
+    </div> -->
     <script src="main.js" defer></script>
   </body>
 </html>
