--- a/frontend/index.html
+++ b/frontend/index.html
@@ -19,6 +19,6 @@
         </form>
       </div>
     </div>
-    <script src="main.js" defer></script>
+    <script src="main.js" defer type="module"></script>
   </body>
 </html>
