--- a/index.html
+++ b/index.html
@@ -28,6 +28,7 @@
           /><br />
           <button id="loginBtn">LOGGA IN!</button>
         </form>
+        <table class="table"></table>
       </div>
     </div>
     <script src="main.js" defer type="module"></script>
