Co-authored-by: MariaLBovin <maria.bovin@gmail.com> Co-authored-by: Sebastian Post <ZynCitrus@users.noreply.github.com> Co-authored-by: YounesEch <YounesEch@users.noreply.github.com> Co-authored-by: nanidam <nanidam@users.noreply.github.com>

--- a/index.html
+++ b/index.html
@@ -6,8 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Grid painter</title>
 
-    <link href="main.css" rel="stylesheet" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />
+    <!-- <script src="https://cdn.socket.io/4.6.0/socket.io.min.js" integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+" crossorigin="anonymous"></script> -->
+    <link href="./style/main.css" rel="stylesheet" />
+    <link rel="icon" type="image/x-icon" href="favicon.ico" />    
+    <script src="../js/main.js" defer type="module"></script>
   </head>
   <body>
     <div class="contentContainer">
@@ -31,6 +33,5 @@
         <table class="table"></table>
       </div>
     </div>
-    <script src="main.js" defer type="module"></script>
   </body>
 </html>
