--- a/index.html
+++ b/index.html
@@ -1,37 +1,38 @@
 <!DOCTYPE html>
 <html lang="sv">
-  <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Grid painter</title>
 
-    <script src="https://cdn.socket.io/4.6.0/socket.io.min.js" integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+" crossorigin="anonymous"></script>
-    <link href="./style/main.css" rel="stylesheet" />
-    <link rel="icon" type="image/x-icon" href="favicon.ico" />    
-    <script src="../js/main.js" defer type="module"></script>
-  </head>
-  <body>
-    <div class="contentContainer">
-      <div class="welcomeWrapper">
-        <h1>GRID PAINTER</h1>
-        <h2>Välkommen till vårt skitsnygga spel!</h2>
-      </div>
-      <div class="loginForm">
-        <p>
-          Skriv in ditt användarnamn i rutan och tryck på logga in för att
-          börja!
-        </p>
-        <form>
-          <input
-            id="inputName"
-            type="text"
-            placeholder="Skriv ditt namn här"
-          /><br />
-          <button id="loginBtn">LOGGA IN!</button>
-        </form>
-        <table class="table"></table>
-      </div>
+<head>
+  <meta charset="UTF-8" />
+  <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <title>Grid painter</title>
+
+  <script src="https://cdn.socket.io/4.6.0/socket.io.min.js"
+    integrity="sha384-c79GN5VsunZvi+Q/WObgk2in0CbZsHnjEqvFxC5DxHn9lTfNce2WW6h2pH6u/kF+"
+    crossorigin="anonymous"></script>
+  <link href="./style/main.css" rel="stylesheet" />
+  <link rel="icon" type="image/x-icon" href="favicon.ico" />
+  <script src="../js/main.js" defer type="module"></script>
+</head>
+
+<body>
+  <div class="contentContainer">
+    <div class="welcomeWrapper">
+      <h1>GRID PAINTER</h1>
+      <h2>Välkommen till vårt skitsnygga spel!</h2>
     </div>
-  </body>
+    <div class="loginForm">
+      <p>
+        Skriv in ditt användarnamn i rutan och tryck på logga in för att
+        börja!
+      </p>
+      <form>
+        <input id="inputName" type="text" placeholder="Skriv ditt namn här" /><br />
+        <button id="loginBtn">LOGGA IN!</button>
+      </form>
+      <table class="table"></table>
+    </div>
+  </div>
+</body>
+
 </html>
