--- a/index.html
+++ b/index.html
@@ -18,9 +18,10 @@
       </div>
       <div class="loginForm">
         <p>
-          Skriv in ditt användarnamn i rutan och tryck på logga in för att
+          Välj ett spelnamn på minst fyra bokstäver och tryck sedan på logga in för att
           börja!
         </p>
+        <p id="alert-msg"></p>
         <form>
           <input
             id="inputName"
